Imperfect fix of navigation height on mobile.

--- a/contents/css/_topbar.css
+++ b/contents/css/_topbar.css
@@ -75,10 +75,10 @@
   z-index: 2;
   min-height: 80vh;
   background-color: var(--evalblack);
-  padding-top: 2rem;
-  font-size: 2rem;
+  padding-top: 1.5rem;
+  font-size: 1.5rem;
   & .link--nav {
-    padding: 2rem 1rem;
+    padding: 1.5rem 1rem;
   }
   & .social-links {
     margin: 0;
